ball from 1st view

--- a/Roller/Roller.vcxproj.filters
+++ b/Roller/Roller.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="Obstacle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="edit_win.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
