--- a/Roller/Roller.vcxproj
+++ b/Roller/Roller.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Color.h" />
     <ClInclude Include="Cube.h" />
+    <ClInclude Include="edit_win.h" />
     <ClInclude Include="gameshare.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Gate.h" />
