ball from 1st view * play window can render ball * draw track in 3d * ball can spawn back * need to fix ball fall through

--- a/Roller/Roller.vcxproj
+++ b/Roller/Roller.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="play.h" />
     <ClInclude Include="RollerTrack.h" />
+    <ClInclude Include="TeleportPoint.h" />
     <ClInclude Include="Vec3.h" />
   </ItemGroup>
   <ItemGroup>
@@ -189,6 +190,7 @@
     <ClCompile Include="Roller.cpp" />
     <ClCompile Include="RollerTrack.cpp" />
     <ClCompile Include="source.cpp" />
+    <ClCompile Include="TeleportPoint.cpp" />
     <ClCompile Include="Vec3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
