--- a/Roller/Roller.vcxproj.filters
+++ b/Roller/Roller.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="edit_win.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TeleportPoint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -108,6 +111,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Obstacle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TeleportPoint.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
