--- a/Roller/Roller.vcxproj.filters
+++ b/Roller/Roller.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="BezierCurve.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Spin.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -120,6 +123,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BezierCurve.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Spin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
